// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExploreContainer matches snapshot with title and subtitle 1`] = `
<View
  colors={
    [
      "#3D6625",
      "#69AB3C",
    ]
  }
  end={
    {
      "x": 0,
      "y": 1,
    }
  }
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "flex": 1,
    }
  }
  testID="explore-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "gap": 12,
        "justifyContent": "center",
        "padding": 24,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        {
          "testUri": "../../../src/assets/png/icon-only.png",
        }
      }
      style={
        {
          "height": 64,
          "width": 64,
        }
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 24,
            "textAlign": "center",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-Bold",
          },
        ]
      }
    >
      Registro
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 16,
            "opacity": 0.9,
            "textAlign": "center",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-Regular",
          },
        ]
      }
    >
      Crea tu cuenta
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "opacity": 0.8,
            "textAlign": "center",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-Regular",
          },
        ]
      }
    >
      Ingresa tus datos
    </Text>
  </View>
</View>
`;

exports[`Header matches snapshot 1`] = `
<View
  style={
    [
      {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#10BCCA",
        "paddingTop": 8,
      },
    ]
  }
  testID="header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        false,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "flexShrink": 1,
            "fontSize": 18,
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-Bold",
          },
          false,
        ]
      }
      testID="header-title"
    >
      Inicio
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#D1FBFC",
          "borderRadius": 18,
          "flexDirection": "row",
          "gap": 4,
          "height": 40,
          "opacity": 1,
          "paddingHorizontal": 10,
        }
      }
      testID="header-profile-btn"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#14788A",
              "fontFamily": "Montserrat-Bold",
            },
          ]
        }
      >
        15
      </Text>
      <svg
        color="#14788A"
        height={16}
        width={16}
      />
      <svg
        color="#14788A"
        height={40}
        width={40}
      />
    </View>
  </View>
</View>
`;

exports[`MoonCard — name and icon never undefined (§4.4 bug fix) matches snapshot 1`] = `
<View
  style={
    [
      {
        "borderRadius": 12,
        "overflow": "hidden",
        "position": "relative",
      },
      {
        "backgroundColor": "#404040",
      },
    ]
  }
  testID="moon-card"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 60,
          "justifyContent": "center",
          "width": 60,
        }
      }
    >
      <svg
        height={60}
        width={60}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
            },
            {
              "color": "#D4D4D4",
              "fontFamily": "Montserrat-Medium",
            },
          ]
        }
      >
        Fase lunar
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 18,
            },
            {
              "color": "#FFFFFF",
              "fontFamily": "Montserrat-SemiBold",
            },
          ]
        }
        testID="moon-card-phase-name"
      >
        Luna llena
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={19}
        vbWidth={19}
        width={20}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M10.3349 4.13964L14.1985 8.00329L15.0521 8.85684H13.845H3.41758C3.31149 8.85684 3.20975 8.89898 3.13474 8.974C3.05972 9.04901 3.01758 9.15075 3.01758 9.25684C3.01758 9.36293 3.05972 9.46467 3.13474 9.53968C3.20975 9.6147 3.31149 9.65684 3.41758 9.65684H13.845H15.0521L14.1985 10.5104L10.3385 14.3704C10.2672 14.4456 10.2278 14.5455 10.2287 14.6493C10.2296 14.7541 10.2716 14.8545 10.3458 14.9286C10.42 15.0028 10.5203 15.0449 10.6252 15.0458C10.7289 15.0467 10.8288 15.0073 10.904 14.9359L16.3003 9.53964C16.3003 9.53962 16.3003 9.5396 16.3003 9.53959C16.3753 9.46458 16.4174 9.36288 16.4174 9.25684C16.4174 9.1508 16.3753 9.0491 16.3003 8.97409L10.3349 4.13964ZM10.3349 4.13964C10.3349 4.13962 10.3348 4.1396 10.3348 4.13959M10.3349 4.13964L10.3348 4.13959M10.3348 3.57415C10.3348 3.57411 10.3348 3.57407 10.3349 3.57404C10.4099 3.49912 10.5116 3.45703 10.6176 3.45703C10.7236 3.45703 10.8253 3.49914 10.9003 3.57409C10.9003 3.57411 10.9004 3.57413 10.9004 3.57415L16.3003 8.97404L10.3348 3.57415ZM10.3348 3.57415C10.2599 3.64915 10.2178 3.75082 10.2178 3.85684C10.2178 3.96288 10.2599 4.06458 10.3348 4.13959M10.3348 3.57415L10.3348 4.13959"
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      {
        "bottom": 0,
        "left": 6,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 6,
        "top": 0,
      }
    }
  >
    <svg
      height="100%"
      preserveAspectRatio="xMidYMid slice"
      width="100%"
    />
  </View>
</View>
`;

exports[`SyncAction matches snapshot (not pending) 1`] = `
<View
  style={
    {
      "gap": 8,
      "padding": 16,
    }
  }
  testID="sync-action"
>
  <Text
    style={
      [
        {
          "fontSize": 16,
        },
        {
          "color": "#171717",
          "fontFamily": "Montserrat-Bold",
        },
      ]
    }
  >
    Sincronización de datos
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
    testID="sync-action-no-pending"
  >
    <svg
      color="#69AB3C"
      height={18}
      width={18}
    />
    <Text
      style={
        [
          {
            "flex": 1,
            "fontSize": 14,
          },
          {
            "color": "#525252",
            "fontFamily": "Montserrat-Regular",
            "fontStyle": "italic",
          },
        ]
      }
    >
      Todo sincronizado
    </Text>
  </View>
  <View
    style={
      {
        "height": 8,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E5E5E5",
        "borderRadius": 8,
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
    testID="sync-action-btn"
  >
    <svg
      color="#A3A3A3"
      height={18}
      width={18}
    />
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#A3A3A3",
            "fontFamily": "Montserrat-SemiBold",
          },
        ]
      }
    >
      Sincronizar ahora
    </Text>
    <svg
      color="#A3A3A3"
      height={18}
      width={18}
    />
  </View>
</View>
`;

exports[`SyncAction matches snapshot (pending) 1`] = `
<View
  style={
    {
      "gap": 8,
      "padding": 16,
    }
  }
  testID="sync-action"
>
  <Text
    style={
      [
        {
          "fontSize": 16,
        },
        {
          "color": "#171717",
          "fontFamily": "Montserrat-Bold",
        },
      ]
    }
  >
    Sincronización de datos
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
    testID="sync-action-pending"
  >
    <svg
      color="#E58B24"
      height={18}
      width={18}
    />
    <Text
      style={
        [
          {
            "flex": 1,
            "fontSize": 14,
          },
          {
            "color": "#E58B24",
            "fontFamily": "Montserrat-Regular",
            "fontStyle": "italic",
          },
        ]
      }
    >
      4 registros pendientes
    </Text>
  </View>
  <View
    style={
      {
        "height": 8,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1097AA",
        "borderRadius": 8,
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
    testID="sync-action-btn"
  >
    <svg
      color="#FFFFFF"
      height={18}
      width={18}
    />
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-SemiBold",
          },
        ]
      }
    >
      Sincronizar ahora
    </Text>
    <svg
      color="#FFFFFF"
      height={18}
      width={18}
    />
  </View>
</View>
`;

exports[`TimeFrame matches snapshot (month selected) 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "borderRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#10BCCA",
      },
    ]
  }
  testID="time-frame"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1097AA",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      }
    }
    testID="time-frame-month"
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "textTransform": "capitalize",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-SemiBold",
          },
        ]
      }
    >
      Mes
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      }
    }
    testID="time-frame-year"
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "textTransform": "capitalize",
          },
          {
            "color": "#10BCCA",
            "fontFamily": "Montserrat-Regular",
          },
        ]
      }
    >
      Año
    </Text>
  </View>
</View>
`;

exports[`TimeFrame matches snapshot (year selected) 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "borderRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#10BCCA",
      },
    ]
  }
  testID="time-frame"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      }
    }
    testID="time-frame-month"
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "textTransform": "capitalize",
          },
          {
            "color": "#10BCCA",
            "fontFamily": "Montserrat-Regular",
          },
        ]
      }
    >
      Mes
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1097AA",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      }
    }
    testID="time-frame-year"
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "textTransform": "capitalize",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-SemiBold",
          },
        ]
      }
    >
      Año
    </Text>
  </View>
</View>
`;
